# django-pdf-reactor

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
demo/: Makefile  package.json  tailwind.config.js
demo/demo/: routing.py  settings.py  urls.py
demo/pdf/: urls.py  views.py
demo/pdf/static/pdf/css/: tailwind-with-print.css
demo/pdf/templates/pdf/: index.html  index_async.html  index_socket.html
docs/pdf_reactor/: apps.m.html  consumers.m.html  index.html  models.m.html  settings.m.html  views.m.html
pdf_reactor/: __init__.py  apps.py  consumers.py  settings.py  views.py
