[tool.poetry]
name = "django-pdf-reactor"
version = "0.1.0"
description = "PDF generator for Django, create PDF files async in channels worker"
readme = 'README.md'
authors = ["TK <dk@terminalkitten.com>"]
repository = "https://github.com/terminalkitten/django-pdf-reactor"
license = "MIT"
packages = [
    { include = "pdf_reactor" },
]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^3.1"
django-channels-graphql-ws = "^0.7.4"
channels = "^2.4.0"
channels-redis = "^3.0.1"
nanoid = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
