[tool.poetry]
name = "django-pdf-reactor"
version = "0.1.3"
description = "PDF generator for Django, support for async generation in Django Channels worker or with Django 3.1 async views."
readme = 'README.md'
authors = ["TK <dk@terminalkitten.com>"]
repository = "https://github.com/terminalkitten/django-pdf-reactor"
license = "MIT"
packages = [
    { include = "pdf_reactor" },
]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1"
django-channels-graphql-ws = "^0.7.4"
channels = "^2.4.0"
channels-redis = "^3.0.1"
nanoid = "^2.0.0"
pdoc = "^0.3.2"
nest_asyncio = "^1.4.3"
pdfmate = "^0.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
